<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/searchBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            >

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_search_edit_bg"
                android:drawableStart="@mipmap/search_hint"
                android:hint="@string/home_search_edit_hint"
                android:paddingStart="0dp"
                android:paddingEnd="45dp"
                android:imeOptions="actionSearch"
                android:singleLine="true"
                android:textSize="14sp" />
            <ImageView
                android:id="@+id/search_clear_text"
                android:layout_centerInParent="true"
                android:layout_alignParentEnd="true"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                android:src="@mipmap/clear"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/search_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cancel_text"
            android:textColor="@color/blackText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/search_main_radius"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/search_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_history"
                    android:textColor="@color/blackText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/search_delete_history"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:src="@mipmap/delete_icon" />
            </RelativeLayout>

            <com.litchi.taobaodemo.ui.component.FlowLayout
                android:id="@+id/search_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_recommend"
                android:textColor="@color/blackText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.litchi.taobaodemo.ui.component.FlowLayout
                android:id="@+id/search_recommend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
        </LinearLayout>

        <com.litchi.taobaodemo.ui.component.LoadingView
            android:id="@+id/search_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout
            android:id="@+id/search_result_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />
        </com.lcodecore.tkrefreshlayout.TwinklingRefreshLayout>

    </LinearLayout>
</LinearLayout>