<?xml version="1.0" encoding="utf-8"?>
<com.litchi.taobaodemo.ui.component.SlideMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_favorites_slider"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/favorites_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/item_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/item_home_view_pager_recycle_logo_bg"
                    android:paddingStart="3dp"
                    android:paddingTop="1dp"
                    android:paddingEnd="3dp"
                    android:paddingBottom="1dp"
                    android:text="@string/tmall_logo"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/favorites_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lineSpacingExtra="2dp"
                    android:maxLines="2"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rmb_char"
                    android:textColor="@color/textPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/favorites_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/favorites_find_similar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/favorites_similar_text_bg"
                android:text="@string/find_similar_text"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</com.litchi.taobaodemo.ui.component.SlideMenuLayout>