<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/goods_detail_root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".ui.activity.GoodsDetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/goods_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/welfare_purchase"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/goods_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.litchi.taobaodemo.ui.component.CusImageView
                            android:id="@+id/goods_detail_cover"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/goods_detail_shop_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#33000000"
                            android:paddingStart="15dp"
                            android:paddingTop="5dp"
                            android:paddingEnd="0dp"
                            android:paddingBottom="5dp"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginEnd="5dp"
                            android:background="@drawable/item_home_view_pager_recycle_logo_bg"
                            android:paddingStart="3dp"
                            android:paddingTop="1dp"
                            android:paddingEnd="3dp"
                            android:paddingBottom="1dp"
                            android:text="@string/tmall_logo"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/goods_detail_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:lineSpacingExtra="2dp"
                            android:maxLines="2"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom">

                            <TextView
                                android:id="@+id/goods_detail_after"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="2dp"
                                android:background="#FBEEE6"
                                android:paddingStart="5dp"
                                android:paddingTop="2dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/after_coupon"
                                android:textColor="@color/textPrimary"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/goods_detail_rmb_char"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/rmb_char"
                                android:textColor="@color/textPrimary"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/goods_detail_final_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:textColor="@color/textPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/goods_detail_original_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textGrey"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/goods_detail_monthly_sales"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="4dp"
                            android:textColor="@color/textGrey"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/goods_detail_coupon_code"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/goods_detail_coupon_code_tv_bg"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:textSize="16sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/goods_detail_get_coupon_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@drawable/goods_detail_get_coupon_btn_bg"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/goods_detail_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerInParent="true"
                            android:src="@mipmap/favorite"
                            android:layout_marginEnd="10dp" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/goods_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/goods_detail" />

            <LinearLayout
                android:id="@+id/goods_detail_small_image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>